Add pancakes recipe placeholder

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   <body>
     <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="../odin-recipes/recipes/pancakes.html">Pancakes</a></li>
+    </ul>
    
 
 
