--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -6,6 +6,32 @@
     </head>
     <body>
         <h1>Pancakes</h1>
+         <img src="../img/pancakes.jpeg">
+        <h2>Description</h2>
+         <p>These are very light and tender pancakes. 
+            These pancakes are excellent with maple syrup.</p>
+        <h2>Ingredients:</h2> 
+         <ul>
+            <li>1 cup whole wheat flour </li>
+            <li>⅔ cup all-purpose flour</li>
+            <li>⅓ cup wheat germ </li>
+            <li>1½ teaspoons baking powder </li>
+            <li>½ teaspoon baking soda </li>
+            <li>2 tablespoons brown sugar </li>
+            <li>1 teaspoon salt </li>
+            <li>5⅓ tablespoons unsalted butter </li>
+            <li>2½ cups buttermilk </li>
+            <li>2 eggs, beaten </li>
+            <li>3 tablespoons unsalted butter </li>
+        
+        </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>In a food processor or in a large bowl, combine the whole wheat flour, white flour, wheat germ or oats, baking powder, baking soda, brown sugar, and salt.</li>
+            <li>Cut the butter into small pieces with a knife, and add the butter to the flour-mixture. Mix until the mixture has a sand-like consistency.</li>
+            <li>Make a well in the center of the flour-butter mixture, and add the buttermilk and eggs. Stir until the liquids are fully incorporated.</li>
+            <li>Heat a frying pan over medium heat and grease the surface with 1 tablespoon of butter or oil. Ladle the batter onto the surface to form 4 inch pancakes. Once bubbles form on the top of the pancakes, flip them over, and cook them on the other side for about 2 minutes.</li>
+        </ol>   
     </body>
 
 
