Add completos, garlic bread recipe, final release

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="../odin-recipes/recipes/pancakes.html">Pancakes</a></li>
+      <li><a href="../odin-recipes/recipes/completos.html">Completos</a></li>
+      <li><a href="../odin-recipes/recipes/garlic-bread.html">Garlic Bread</a></li>
     </ul>
    
 
